# Kitty-Theme-Manager

./: CMakeLists.txt  README.md
scripts/: build.sh  install.sh  run.sh  uninstall.sh
src/main/: io_service.c  io_service.h  main.c  system_utils.c  system_utils.h  theme_manager.c  theme_manager.h
